[tool.poetry]
name = "otsukare"
version = "0"
description = "Otsukare is a web application to help Japanese language students study."
license = "MIT"
authors = ["Nick Jenkins"]
readme = "README.md"
homepage = "https://otsukare.herokuapp.com/"
repository = "https://github.com/ndjenkins85/otsukare/"
documentation = "https://ndjenkins85.github.io/otsukare/"
keywords = [
    "python",
    "heroku",
    "japanese_language",
    "japanese_study"
    ]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation :: Sphinx",
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
pip = "^21.1.2"
sphinx = {version = "^4", optional = true}
Flask = "^2.0.1"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
Flask-Script = "^2.0.6"
Flask-WTF = "^0.15.1"
itsdangerous = "^2.0.1"
pandas = "^1.3.2"
WTForms = "^2.3.3"
gunicorn = "^20.1.0"
Werkzeug = "^2.0.1"
SQLAlchemy = "1.4.22"
Flask-SQLAlchemy = "^2.5.1"
email-validator = "^1.1.3"
psycopg2-binary = "^2.9.1"
lxml = "^4.6.3"
beautifulsoup4 = "^4.9.3"
requests = "^2.26.0"
urllib3 = "^1.26.7"
chardet = "^4.0.0"
certifi = "^2021.5.30"
duolingo-api = "^0.5.4"
tqdm = "^4.62.3"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.7b0"
jupyter = "^1.0.0"
ipython = "^7.27.0"
m2r2 = "^0.3.1"
mypy = "^0.910"
nox = "^2021.6.12"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"
sphinx-rtd-theme = "^0.5.2"
sphinx-autodoc-typehints = "^1.12.0"

[tool.poetry.extras]
docs = ["sphinx"]

[tool.poetry.scripts]
otsukare = 'otsukare:app'

[tool.poetry-version-plugin]
source = "init"

[build-system]
# Should ideally be the same as `$POETRY_VERSION` in dockerfile
# But currently no pip installable alpha
requires = ["poetry>=1.2.0a2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_local_folder = ["otsukare"]
skip_glob = [
    "otsukare/__init__.py",
    "otsukare/my_forms.py",
    "otsukare/views.py"
    ]

[tool.mypy]
python_version = 3.8

[[tool.mypy.overrides]]
module = [
    'sphinx_rtd_theme',
    'nox.*',
    'pytest',
    ]
ignore_missing_imports = true

[tool.coverage.run]
parallel = true
source = [
    "otsukare",
    "tests",
    "noxfile.py",
    "docs/conf.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]
